[project]
name = "account-service"
version = "0.1.0"
description = "raricy.com dried-fish virtual currency account microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.13,<1.14",
    "pydantic>=2.9,<2.10",
    "pydantic-settings>=2.5,<2.6",
    "httpx>=0.27,<0.28",
    "python-dotenv>=1.0,<1.1",
    "slowapi>=0.1,<0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
